--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@builder.io/qwik": "1.18.0",
+    "@builder.io/qwik-city": "^1.18.0",
     "@eslint/js": "latest",
     "@types/node": "20.19.0",
     "eslint": "9.32.0",
