feat: create the `example` application
Signed-off-by: Luke Gareth Ribchester <luke@luke.gr>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lgr.dev/qwik-reveal",
   "version": "0.0.1",
-  "description": "A Qwik library for scroll-based reveal animations",
+  "description": "A Qwik library for scroll and time-driven reveal animations",
   "license": "MIT",
   "main": "./lib/index.qwik.mjs",
   "qwik": "./lib/index.qwik.mjs",
@@ -27,13 +27,16 @@
     "build": "qwik build",
     "build.lib": "vite build --mode lib",
     "build.types": "tsc --emitDeclarationOnly",
+    "build.example.client": "vite build -c vite.example.config.ts",
+    "build.example.server": "qwik check-client src dist && vite build -c adapters/static/vite.config.ts",
+    "build.example": "npm run build.example.client && npm run build.example.server",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "release": "np",
-    "start": "vite --open --mode ssr",
+    "start": "vite --open --mode ssr -c vite.example.config.ts",
     "test": "echo \"No test specified\" && exit 0",
     "qwik": "qwik"
   },
@@ -41,12 +44,15 @@
     "@builder.io/qwik": "1.18.0",
     "@builder.io/qwik-city": "^1.18.0",
     "@eslint/js": "latest",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/node": "20.19.0",
     "eslint": "9.32.0",
     "eslint-plugin-qwik": "1.18.0",
     "globals": "16.4.0",
     "np": "^8.0.4",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.4.5",
     "typescript-eslint": "8.38.0",
     "undici": "*",
